<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/photo_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/black"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
    
        <ImageView
            android:id="@+id/photo_preview"
            android:layout_width="130dp"
            android:layout_height="173dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:contentDescription="@string/photo"
            />
        <TextView
            android:id="@+id/add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            android:text="@string/add"/>
        <TextView
            android:id="@+id/data_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            android:text="@string/photo_date"/>


    </LinearLayout>

</android.support.v7.widget.CardView>