<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/album_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardElevation="16dp"
    app:cardCornerRadius="16dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/conteiner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/album_name"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="@id/conteiner1"
            app:layout_constraintStart_toStartOf="@id/conteiner1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cover_photo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/cover_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_name"
            />


        <TextView
            android:id="@+id/count_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/count_photos"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/conteiner1"
            app:layout_constraintStart_toStartOf="@id/conteiner1"
            app:layout_constraintTop_toBottomOf="@+id/cover_photo" />

    </android.support.constraint.ConstraintLayout>




</android.support.v7.widget.CardView>